Fix ul color in dark mode

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -815,6 +815,10 @@ a.icon__linkedin:active {
     background-image: linear-gradient(to bottom,rgba(10, 111, 194, 0.6) 50%,rgba(0,0,0,0) 50%);
   }
 
+  ul {
+    color: rgb(196, 205, 212);;
+  }
+
   ul a {
     color: #c4ccd3;
     color: hsla(207, 15%, 80%, 1);
